feat(server) install drizzle-orm, libsql client

--- a/packages/apps/server/package.json
+++ b/packages/apps/server/package.json
@@ -6,10 +6,13 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "@libsql/client": "^0.9.0",
+    "drizzle-orm": "^0.33.0",
     "elysia": "latest"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "bun-types": "latest",
+    "drizzle-kit": "^0.24.0"
   },
   "module": "src/index.ts"
 }
