--- a/packages/apps/server/package.json
+++ b/packages/apps/server/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "@libsql/client": "^0.9.0",
     "drizzle-orm": "^0.33.0",
-    "elysia": "latest"
+    "drizzle-typebox": "^0.1.1",
+    "elysia": "latest",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "bun-types": "latest",
