feat(biome) change js quoteStyle to single

--- a/biome.json
+++ b/biome.json
@@ -12,7 +12,7 @@
       "lineEnding": "lf",
       "semicolons": "always",
       "trailingCommas": "all",
-      "quoteStyle": "double",
+      "quoteStyle": "single",
       "lineWidth": 80
     }
   },
