--- a/packages/apps/server/package.json
+++ b/packages/apps/server/package.json
@@ -10,6 +10,7 @@
     "drizzle-orm": "^0.33.0",
     "drizzle-typebox": "^0.1.1",
     "elysia": "latest",
+    "ulid": "^2.3.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
