feat(server) install typebox

--- a/packages/apps/server/package.json
+++ b/packages/apps/server/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@libsql/client": "^0.9.0",
+    "@sinclair/typebox": "^0.33.7",
     "drizzle-orm": "^0.33.0",
     "drizzle-typebox": "^0.1.1",
     "elysia": "latest",
