--- a/packages/apps/server/package.json
+++ b/packages/apps/server/package.json
@@ -13,6 +13,7 @@
     "drizzle-orm": "^0.33.0",
     "drizzle-typebox": "^0.1.1",
     "elysia": "latest",
+    "ts-pattern": "^5.3.1",
     "ulid": "^2.3.0",
     "zod": "^3.23.8"
   },
